cherki hamza portfolio update

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>cherki JS</title>
+    <title>cherki web</title>
 </head>
 <body>
 <div class="container">
