--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>cherki JS</title>
+    <title>cherki web</title>
 </head>
 <body>
 <div class="container">
@@ -48,7 +48,7 @@
                 </h1>
                 <h2 class="text-center">
                     <p>
-                       <span> I want to make things</span> <br> <strong> make a difference </strong>
+                       <span class="text-danger"> I want to make things</span> <br> <strong class="text-primary"> make a difference </strong>
                     </p>
                 </h2>
             </div>
@@ -75,6 +75,7 @@
 
                                 <span class="badge badge-pill badge-info">php</span>
                                 <span class="badge badge-pill badge-info">Wordpress Theme Development</span>
+                                <span class="badge badge-pill badge-info">Wordpress woocommerce Theme Development</span>
                                 <span class="badge badge-pill badge-info">Fremwork php Laravel</span>
                                 <span class="badge badge-pill badge-info">php</span>
                              </li>
