cherki hamza portfolio update facebook

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                         my name is cherki hamza i'm a developer web full stack :). 
                         so i'm a programmer lover , i love to match to cooding <br>
                         <strong class="text-primary bold">hpac cherki</strong>
+                        <hr style="height: 2px; color:crimson;">
+                        <div class="fb-comments" data-href="https://cherki-hamza.github.io/portfolio/index.html" data-width="" data-numposts="5"></div>
                      </div>
                      <div class="col2"><hr></div>
                      <div class="col-3">
@@ -92,6 +94,8 @@
         </div>
 </div>
 
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=135066377342959&autoLogAppEvents=1"></script>
 <script src="assets/js/jquery.js"></script>
 <script src="assets/js/bootstrap.js"></script>
 <script src="assets/js/all.js"></script>
